# game_engine

./: CMakeLists.txt
src/: main.cpp
src/graphics_engine/constants/: constants.h
src/graphics_engine/objects/model_core/edge/: edge.cpp  edge.h
src/graphics_engine/objects/model_core/model/: model.cpp  model.h
src/graphics_engine/objects/model_core/triangle/: triangle.cpp  triangle.h
src/graphics_engine/objects/model_core/vertex/: vertex.cpp  vertex.h
src/graphics_engine/screen/: screen.cpp  screen.h
src/graphics_engine/utils/: image_utils.cpp  image_utils.h
